# STMShit

./: Cargo.toml  Embed.toml  memory.x  readme.md
.cargo/: config.toml
src/: main.rs
