[package]
name = "stm32f105-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0"
# RTT для отладочного вывода
rtt-target = "0.5"
bxcan = "0.8"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f407", "can"] # replace the model of your microcontroller here
# and add other required features

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"


[package.metadata.cortex-m-rt]
memory-x = "memory.x"


[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false
